fixing a width style on mobile +Seo

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,12 +1,3 @@
-#holder {
-  min-height: 100%;
-  width: 100%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-
 #room {
   height: 92%;
   width: 100%;
@@ -108,5 +99,27 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+  }
+}
+
+@media (min-width: 377px) {
+  #holder {
+    min-height: 100%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+}
+
+@media (max-width: 376px) {
+  #holder {
+    width: fit-content;
+    min-height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
   }
 }
